<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_daily_news">Daily News</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_settings">Settings</string>
    <string name="title_bottom_sheet_list_dialog">Bottom sheet</string>
    <string name="input_date_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="output_date_format">dd MMMM, yyyy</string>
    <string name="saved_to_bookmarks">Saved to bookmarks</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="list_item_clicked_message">RecyclerView item clicked!</string>
    <string name="unset_bookmark_clicked_message">Unset bookmark clicked!</string>
    <string name="more_button_clicked_message">More button clicked</string>
    <string name="set_bookmark_clicked_message">Set bookmark clicked!</string>

    <string name="preference_file_key">com.example.newsapp.PREFERENCE_FILE_KEY</string>
    <string name="country_key">COUNTRY_KEY</string>
    <string name="country_default_value">us</string>
    <string name="auto_play_videos_default_value">Enabled</string>
    <string name="article_text_size_default_value">Same as system</string>

    <string name="preference_key_country">country</string>
    <string name="preference_key_notifications">notifications</string>
    <string name="preference_key_sound">sound</string>
    <string name="preference_key_auto_play_videos">auto_play_videos</string>
    <string name="preference_key_article_text_size">article_text_size</string>

    <string name="preference_title_country">Country of interest</string>
    <string name="preference_dialog_title_country">Choose county of interest</string>
    <string name="preference_title_notification">Notifications</string>
    <string name="preference_summary_notification">Notify me about updates to news</string>
    <string name="preference_title_sound">Sound</string>
    <string name="preference_summary_sound">Auto-update apps at anytime</string>
    <string name="preference_title_auto_play_videos">Auto-play videos</string>
    <string name="preference_title_article_text_size">Article text size</string>
    <string name="preference_dialog_title_auto_play_videos">Choose auto-play videos</string>

    <string name="app_database_article_table">article</string>

    <string name="share">Share</string>
    <string name="go_to_source">Go to source</string>
</resources>