<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dailyNewsFragment">

    <fragment
        android:id="@+id/dailyNewsFragment"
        android:name="com.example.newsapp.ui.dailynews.DailyNewsFragment"
        android:label="@string/title_daily_news"
        tools:layout="@layout/fragment_daily_news" >
        <action
            android:id="@+id/action_dailyNewsFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />
        <action
            android:id="@+id/action_dailyNewsFragment_to_bottomSheetFragment"
            app:destination="@id/bottomSheetFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.example.newsapp.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_bookmarksFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />
        <action
            android:id="@+id/action_bookmarksFragment_to_bottomSheetFragment"
            app:destination="@id/bottomSheetFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.newsapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.example.newsapp.ui.article.WebViewFragment"
        tools:layout="@layout/fragment_web_view" />
    <dialog
        android:id="@+id/bottomSheetFragment"
        android:name="com.example.newsapp.ui.bottomsheet.BottomSheetFragment"
        android:label="fragment_bottom_sheet_list_dialog"
        tools:layout="@layout/fragment_bottom_sheet" />
</navigation>